[package]
name = "rainstick"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
cortex-m-rt = "0.6.12"
cortex-m-rtic = "0.5.3"
embedded-graphics = "0.6.2"
st7789 = "0.5.0"
mpu9250 = { version = "0.22.2", features = [ "i2c" ] }
stm32f4xx-hal = { version = "0.8.3", features = ["rt", "stm32f411"] }
debouncr = "0.1.2"
display-interface = "0.4.0"
display-interface-spi = "0.4.0"
panic-halt = "0.2.0"
ufmt = "0.1.0"
heapless = "0.5.5"
cortex-m-semihosting = "0.3.5"
madgwick = "0.1.1"
